welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: too many arguments for method &&: (x: Boolean)Boolean
	return ((!negative && ( a>=0, b>=0 ) | negative && ( a<=0 , b<=0 )) | (a<=0, b>=0) |(a>=0, b<=0))
                           ^